Fixed some alignment issues and project preview font size.

--- a/src/App.css
+++ b/src/App.css
@@ -145,13 +145,7 @@
 }
 
 .clip-shadow {
-  max-width: 90%;
-  max-height: 90%;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: -16px;
-  padding: 16px;
   filter: drop-shadow(0 4px 10px black);
 }
 
@@ -232,7 +226,7 @@
 .nav-list {
   opacity: 0;
   width: 0;
-  gap: 8px;
+  gap: 16px;
   will-change: opacity, width, margin;
   transition: all 500ms ease;
   content: "";
@@ -450,9 +444,14 @@
     gap: 0;
   }
 
+  .nav-line {
+    height: 100%;
+  }
+
   .page {
-    left: 32px;
-    right: 8px;
-    overflow: hidden;
+    left: 40px;
+    right: 16px;
+    max-width: 100%;
+    max-height: 100%;
   }
 }
