--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -102,7 +102,7 @@
   .carousel-nav {
     position: absolute;
     left: unset;
-    right: 0.25em;
+    right: 0;
     bottom: 50%;
     transform: translateY(50%);
     flex-direction: column;
@@ -115,5 +115,6 @@
 
   .carousel-track {
     flex-direction: column;
+    padding-right: 24px;
   }
 }
